<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modificar">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="32dp"
        android:text="@string/titulo_modificar"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtModelo"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="36dp"
        android:autofillHints="@string/hint_modelo"
        android:ems="10"
        android:hint="@string/hint_modelo"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints,TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtCombustible"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/hint_combustible"
        android:ems="10"
        android:hint="@string/hint_combustible"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAnio"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtAnio"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/hint_año"
        android:ems="10"
        android:hint="@string/hint_año"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMarca"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtMarca"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="19dp"
        android:autofillHints="@string/hint_marca"
        android:ems="10"
        android:hint="@string/hint_marca"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtModelo"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtPrecio"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/hint_precio"
        android:ems="10"
        android:hint="@string/hint_precio"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCombustible"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/btnFoto"
        android:layout_width="135dp"
        android:layout_height="115dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/img_descripcion"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecio"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,ImageContrastCheck"
        tools:src="@android:drawable/ic_menu_gallery"
        tools:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/rojoOscuro"
        android:text="@string/btn_editar"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFoto" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/rojoOscuro"
        android:text="@string/btn_actualizar"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFoto" />

    <Button
        android:id="@+id/btn_Eliminar"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/rojoOscuro"
        android:text="@string/btn_eliminar"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/btnEditar"
        app:layout_constraintTop_toBottomOf="@+id/btnFoto" />

</androidx.constraintlayout.widget.ConstraintLayout>