<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrarse">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginTop="45dp"
        android:text="@string/titulo_Registrarse"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/txtModelo"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="22dp"
        android:autofillHints="@string/hint_usuario"
        android:ems="10"
        android:hint="@string/hint_usuario"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/txtMarca"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="19dp"
        android:autofillHints="@string/hint_contraseña"
        android:ems="10"
        android:hint="@string/hint_contraseña"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtModelo"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtAnio"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/hint_nombre"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMarca"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtCombustible"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/hint_apellidop"
        android:ems="10"
        android:hint="@string/hint_apellidop"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAnio"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtPrecio"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/hint_apellidom"
        android:ems="10"
        android:hint="@string/hint_apellidom"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCombustible"
        tools:ignore="TextContrastCheck" />
    <EditText
        android:id="@+id/txtCodigo"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/hint_codigo"
        android:ems="10"
        android:hint="@string/hint_codigo"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecio"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/rojoOscuro"
        android:text="@string/btn_registrar"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCodigo" />

</androidx.constraintlayout.widget.ConstraintLayout>