<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="142dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/logo"
        tools:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="49dp"
        android:gravity="center"
        android:text="@string/titulo_principal"
        android:textColor="@color/negro"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/hint_usuario"
        android:inputType="textWebEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtMarca"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="38dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="38dp"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/hint_contraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginStart="104dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="104dp"

        android:backgroundTint="@color/rojoOscuro"
        android:text="@string/btn_ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMarca" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"

        android:backgroundTint="@color/rojoOscuro"
        android:text="@string/btn_registrate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAgregar" />

</androidx.constraintlayout.widget.ConstraintLayout>